# agent-brain

./: .env.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  README.md  TODO.md  Taskfile.yml  config.yaml.example
.claude/: CLAUDE.md  settings.local.json
.planning/: CONVENTIONS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v10.0-MILESTONE-AUDIT.md  v10.3-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md  v6.0.2-MILESTONE-AUDIT.md  v9.2.0-MILESTONE-AUDIT.md  (+1 more)
agent-brain-cli/: README.md  Taskfile.yml  pyproject.toml
agent-brain-cli/agent_brain_cli/: __init__.py  __main__.py  cli.py  config.py  config_migrate.py  config_schema.py  diagnostics.py  mcp_runtime.py  migration.py  xdg_paths.py
agent-brain-cli/agent_brain_cli/client/: __init__.py  api_client.py  protocol.py  transport.py
agent-brain-cli/agent_brain_cli/commands/: __init__.py  cache.py  config.py  doctor.py  folders.py  graph.py  index.py  init.py  inject.py  install_agent.py  jobs.py  list_cmd.py  mcp.py  prompt.py  query.py  reset.py  resources.py  start.py  status.py  stop.py  types.py  uninstall.py
agent-brain-cli/agent_brain_cli/runtime/: __init__.py  claude_converter.py  codex_converter.py  converter_base.py  gemini_converter.py  mcp_registration.py  opencode_converter.py  parser.py  skill_runtime_converter.py  tool_maps.py  types.py
agent-brain-cli/tests/: test_api_key_auth.py  test_api_key_propagation.py  test_backend_client_protocol.py  test_bugfix01_start_timeout.py  test_cache_command.py  test_cli.py  test_cli_query_modes.py  test_cli_transport_flags.py  test_client.py  test_client_from_httpx.py  test_codex_converter.py  test_config.py  test_config_migrate.py  test_config_resolve_mcp_transport.py  test_config_resolve_transport.py  test_config_validate.py  test_diagnostics_stale_graph.py  test_folders_cli.py  test_folders_watch_flags.py  test_init_api_key.py  test_inject_command.py  test_install_agent.py  test_install_agent_mcp.py  test_jobs_progress.py  test_mcp_backend_factory.py  test_mcp_backend_protocol.py  test_mcp_registration.py  test_mcp_registration_codex.py  test_mcp_registration_opencode.py  test_mcp_runtime.py  test_mcp_start_command.py  test_mcp_stop_command.py  test_multi_instance_commands.py  test_prompt_command.py  test_query_explain_render.py  test_resolve_mcp_transport_discovery.py  test_resolver_and_doctor.py  test_resources_command.py  test_runtime_converters.py  test_runtime_integration.py  (+9 more)
agent-brain-cli/tests/commands/: test_config_wizard.py  test_graph_restore.py
agent-brain-cli/tests/contract/: _normalize.py  test_transport_equivalence.py
agent-brain-cli/tests/integration/: _corpus.py  test_mcp_helper_commands.py  test_resources_e2e.py
agent-brain-mcp/: README.md  Taskfile.yml  pyproject.toml
agent-brain-mcp/agent_brain_mcp/: __init__.py  cli.py  client.py  config.py  errors.py  http.py  oauth_metadata.py  schemas.py  server.py
agent-brain-mcp/agent_brain_mcp/oauth/: __init__.py  keys.py  oauth_client.py  oauth_handlers.py  provider.py  registration.py  scopes.py  token_storage.py  tokens.py  verifier.py
agent-brain-mcp/agent_brain_mcp/prompts/: __init__.py  audit_indexed_folders.py  compare_search_modes.py  explain_architecture.py  find_callers.py  find_implementation.py  onboard_to_codebase.py  types.py
agent-brain-mcp/agent_brain_mcp/resources/: __init__.py  corpus.py  parameterized.py
agent-brain-mcp/agent_brain_mcp/security/: __init__.py
agent-brain-mcp/agent_brain_mcp/subscriptions/: __init__.py  errors.py  manager.py  payloads.py  policies.py
agent-brain-mcp/agent_brain_mcp/tools/: __init__.py  cache.py  explain.py  file_types.py  folders.py  index.py  inject.py  jobs.py  meta.py  search.py  wait.py
agent-brain-mcp/docs/: SPLIT_AS_RS.md
agent-brain-mcp/tests/: conftest.py  conftest_keycloak.py  test_add_documents_tool.py  test_api_key_propagation.py  test_auth_mode_config.py  test_cache_tool.py  test_cancellation.py  test_clear_cache_tool.py  test_cli_backends_methods_wire.py  test_cli_backends_query_wire.py  test_cli_backends_skeleton.py  test_cli_transport_flags.py  test_client_phase54.py  test_config_resolution.py  test_dispatch.py  test_dns_rebinding.py  test_e2e_stdio.py  test_e2e_wait_for_job.py  test_each_tool.py  test_error_mapping.py  test_explain_tool.py  test_file_types_presets.py  test_file_types_tool.py  test_folders_tool.py  test_http_listener.py  test_http_loopback.py  test_http_negative_paths.py  test_http_subscriptions_endpoint.py  test_initialize.py  test_inject_documents_tool.py  test_loopback_enforcement.py  test_mcp_backend_prompts_wire.py  test_mcp_backend_protocol_skeleton.py  test_mcp_http_backend_discovery.py  test_mcp_http_backend_oauth.py  test_mcp_startup_gate.py  test_notification_shape.py  test_oauth_authorize_pkce.py  test_oauth_cimd_ssrf.py  test_oauth_client_dance_e2e.py  (+35 more)
agent-brain-mcp/tests/_stubs/: __init__.py  ignore_sigterm.py
agent-brain-mcp/tests/contract/: _tool_matrix.py  conftest.py  test_contract_smoke.py  test_http_transport_contract.py  test_resources_contract.py  test_subscription_lifecycle.py  test_tools_contract.py
agent-brain-mcp/tests/e2e/: conftest.py  test_e2e_index_and_query.py  test_e2e_lifecycle.py  test_e2e_prompts.py  test_e2e_resources.py  test_e2e_search.py  test_e2e_smoke.py  test_e2e_subscriptions.py
agent-brain-mcp/tests/e2e/fixtures/tiny_corpus/: README.md
agent-brain-mcp/tests/e2e/fixtures/tiny_corpus/docs/: auth.md  storage.md
agent-brain-mcp/tests/e2e/fixtures/tiny_corpus/src/: auth.py  query_service.py
agent-brain-mcp/tests/stress/: __init__.py  test_orphan_subprocess.py
agent-brain-mcp/tests/subscriptions/: test_manager.py  test_manager_snapshot.py  test_payloads.py  test_policies.py  test_policy_integration.py
agent-brain-uds/: README.md  Taskfile.yml  pyproject.toml
agent-brain-uds/agent_brain_uds/: __init__.py  client.py  errors.py  paths.py  permissions.py
agent-brain-uds/tests/: conftest.py  test_client_roundtrip.py  test_paths.py  test_permissions.py  test_pointer_file_safety.py  test_smoke.py
(+939 files in other folders)
