[tool.poetry]
name = "agent-brain-cli"
version = "10.2.1"
description = "Agent Brain CLI - Command-line interface for managing AI agent memory and knowledge retrieval"
authors = ["Spillwave Solutions"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SpillwaveSolutions/agent-brain"
repository = "https://github.com/SpillwaveSolutions/agent-brain"
documentation = "https://github.com/SpillwaveSolutions/agent-brain/wiki"
keywords = ["agent-brain", "rag", "cli", "ai-memory", "llm-memory", "semantic-search", "ai-agent", "claude-code", "agent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "agent_brain_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
httpx = "^0.28.0"
rich = "^13.9.0"
pyyaml = "^6.0.0"
pydantic = "^2.10.0"
agent-brain-rag = "^10.2.1"
agent-brain-uds = "^10.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-PyYAML = "^6.0.0"
# Phase 57-01: agent-brain-mcp is a soft runtime dep (lazy-imported by
# transport.py only on the --transport mcp branch), but the test suite
# exercises the dispatcher's MCP routing + §3.5 case 3 PATH precheck.
# develop=false mirrors the Phase 56-03 precedent for path deps — install
# as a built package (only agent_brain_mcp/, not tests/) to avoid the
# .pth-injection that would let agent-brain-mcp's tests/ collide with
# agent-brain-cli's tests/__init__.py.
agent-brain-ag-mcp = { path = "../agent-brain-mcp", develop = false }

[tool.poetry.scripts]
agent-brain = "agent_brain_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
