[tool.poetry]
name = "agent-brain-ag-mcp"
version = "10.2.1"
description = "Agent Brain MCP - Model Context Protocol server exposing Agent Brain as MCP tools, resources, and prompts"
authors = ["Spillwave Solutions"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SpillwaveSolutions/agent-brain"
repository = "https://github.com/SpillwaveSolutions/agent-brain"
documentation = "https://github.com/SpillwaveSolutions/agent-brain/wiki"
keywords = ["agent-brain", "mcp", "model-context-protocol", "rag", "claude", "claude-desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "agent_brain_mcp"}]

[tool.poetry.scripts]
agent-brain-mcp = "agent_brain_mcp.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.12.0"
httpx = "^0.28.0"
pydantic = "^2.10.0"
click = "^8.1.0"
# Path-installed for local dev (plan §13 + need Phase 2 ConfigStatus model).
# Release process swaps both to PyPI pins before publishing.
#
# Phase 51 Plan 04: bumped from ^10.1.0 to ^10.2.0 in lockstep with the
# MIN_BACKEND_VERSION runtime check (agent_brain_mcp/server.py). Phase
# 50 lands the v2 server endpoints (GET /query/chunk/{id}, GET /graph/
# entity/{type}/{id}) in agent-brain-server 10.2.0; the MCP package
# now refuses to run against anything older both at install time (this
# pin) and at startup (the version-floor check).
agent-brain-rag = "^10.2.1"
agent-brain-uds = "^10.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
# Phase 53 Plan 03: test_http_loopback.py uses psutil.Process.net_connections
# to inspect the bound socket interface of an agent-brain-mcp HTTP subprocess.
# Dev-only — psutil is NOT a runtime dependency of agent-brain-mcp.
psutil = "^6.0"
# Phase 56 Plan 03 (CLI-MCP-01, CLI-MCP-02): McpStdioBackend + McpHttpBackend
# skeletons in agent_brain_mcp/client.py structurally satisfy the BackendClient
# Protocol declared at agent_brain_cli/client/protocol.py (Plan 56-02). The
# Protocol is only needed for mypy strict + pytest isinstance assertions —
# @runtime_checkable means runtime conformance is structural and requires no
# hard dep. Path dep here keeps the MCP package's PyPI install surface clean
# (CLI users who never touch --transport mcp will not pull agent-brain-cli).
#
# develop = false (NOT develop = true): a develop=true install drops a .pth
# file that puts `../agent-brain-cli` on sys.path, which makes the CLI's
# tests/ directory shadow agent-brain-mcp's own tests/ package. pytest then
# fails to import `tests.conftest` and `tests.contract._tool_matrix` from
# agent-brain-mcp's suite. develop=false also matches the precedent in
# agent-brain-mcp/Taskfile.yml's `install` task which writes path deps for
# agent-brain-rag / agent-brain-uds with `develop = false`.
agent-brain-cli = { path = "../agent-brain-cli", develop = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# The MCP SDK uses untyped decorators (server.list_tools(), etc.); we
# can't fix that upstream and strict mypy flags every usage. Disable
# the noisy codes for the one file that actually wires the SDK.
[[tool.mypy.overrides]]
module = "agent_brain_mcp.server"
disable_error_code = ["misc", "no-untyped-call", "untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end test requiring a real agent-brain-serve subprocess and the official MCP Python SDK as client (slow; opt-in via `task mcp:e2e`)",
    "e2e_http: end-to-end test requiring an agent-brain-mcp subprocess in HTTP transport mode (slow; opt-in via `task mcp:smoke:http`)",
    "contract: SDK-driven contract test verifying MCP wire-protocol conformance (stdio + HTTP transports). Spawns fake-backed agent-brain-mcp subprocesses via the official MCP Python SDK client. Opt-in via `task mcp:contract`. Phase 55 Plans 01-04.",
    "stress: 1000-invocation no-orphan test (MCPHYG-02 — slow, opt-in via `task mcp:stress:orphan-test`; NOT in task before-push). Drives McpStdioBackend through tight query→close cycles asserting psutil children delta returns to zero per iteration.",
]
# Default test runs exclude e2e + contract + stress suites to keep `task mcp:test` fast.
addopts = "-m 'not e2e and not e2e_http and not contract and not stress'"
