[tool.poetry]
name = "agent-brain-uds"
version = "10.0.7"
description = "Agent Brain UDS - Unix-domain-socket transport for Agent Brain (socket path resolution, permission validation, httpx UDS client factory)"
authors = ["Spillwave Solutions"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SpillwaveSolutions/agent-brain"
repository = "https://github.com/SpillwaveSolutions/agent-brain"
documentation = "https://github.com/SpillwaveSolutions/agent-brain/wiki"
keywords = ["agent-brain", "uds", "unix-domain-socket", "transport", "httpx", "ipc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
]
packages = [{include = "agent_brain_uds"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.0"
# agent-brain-rag dependency added in Phase 1 when models are imported.

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
